--- a/src/assets/MainPage.module.css
+++ b/src/assets/MainPage.module.css
@@ -39,10 +39,16 @@
 }
 
 .contentContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  width: 1880px; 
   max-width: 1880px;
-  margin: 0 auto;  
-  padding: 0 20px;  
+  margin: 0 auto;
 }
+
 
 .sectionTitle {
   font-size: 2rem;
